Fix Homepage translation wrapping issues. See #84

--- a/sites/all/themes/dev/warmshowers_zen/css/fresh.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/fresh.css
@@ -713,32 +713,8 @@ div.block-locale ul a.active {
 		text-decoration: none;
 }
 
-#block-wsuser-wsuser_member_count_block {
-    background: none;
-    padding: 0;
-    color: #a2c2e4;
-    font-weight: normal;
-    width: auto;
-}
-
-
-#block-wsuser-wsuser_member_count_block div {
-    float: left;
-    text-transform: uppercase;
-}
-
-.big_number {
-    font-size: 3em;
-    color: #fff;
-    font-family: 'Sue Ellen Francisco', cursive;
-		font-weight: normal;
-}
-
-.numusers {
-    margin-right: 45px;
-}
-
 /* Anonymous Homepage */
+
 body.front.not-logged-in #highlight_wrapper_anon {
 	position: relative;
 	height: 85px;
@@ -746,16 +722,49 @@ body.front.not-logged-in #highlight_wrapper_anon {
 }
 body.front.not-logged-in #highlight_wrapper_anon .welcome_msg {
 	position: absolute;
-	top: 0;
-	left: 300px;
-	width: 420px;
+	top: 10px;
+	left: 264px;
+	width: 460px;
 	color: #a2c2e4;
-	font-size: 13px;
+	font-size: 11px;
+	line-height: 17px;
 }
 body.front.not-logged-in #highlight_wrapper_anon .welcome_msg strong {
 	color: #FFF;
 	font-weight: normal;
 }
+body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block {
+  width: 280px;
+  height: 100px;
+  float: none;
+  margin: 0;
+  overflow: inherit;
+  background: none;
+  color: #a2c2e4;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numusers,
+body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numhosts {
+	position: absolute;
+	width: 120px;
+	height: 62px;
+	word-wrap: break-word;
+	bottom: 0;
+	left: 0;
+  text-transform: uppercase;
+	font-size: 12.5px;
+}
+body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .numhosts {
+	left: 140px;
+}
+body.front.not-logged-in #highlight_wrapper_anon #block-wsuser-wsuser_member_count_block .big_number {
+	font-size: 46px;
+	color: #FFF;
+  font-family: 'Sue Ellen Francisco', cursive;
+}
+
 body.not-logged-in .region-highlight .block {
 	height: auto;
 	margin-top: 0;
